--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(//fonts.googleapis.com/css?family=Inconsolata:400,400italic,700,700italic);
+
 html {
     font-size: 100%;
     -webkit-text-size-adjust: 100%;
