--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     margin: 0;
     font-size: 14px;
     font-family: 'Source Sans Pro', sans-serif;
+    font-weight: 400;
     line-height: 20px;
     color: #333333;
     background-color: #ffffff;
