--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url(//fonts.googleapis.com/css?family=Inconsolata:400,400italic,700,700italic);
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,700,700italic);
+@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic);
 @import url(//fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700);
 
 html {
